Added django-html to supported languages.
This allows b4 snippets to be used in syntax extensions "thebarkman.vscode-djaneiro" and "batisteo.vscode-django".

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
         "path": "./snippets.json"
       },
       {
+        "language": "django-html",
+        "path": "./snippets.json"
+      },      
+      {
         "language": "ejs",
         "path": "./snippets.json"
       },
